# llm_test

./: 01_03_begin.py  01_05_challenge.py  Dockerfile  exercise_01.ipynb  pyproject.toml  requirements.txt
01/: 01_02_begin.py  01_04_begin.py  x1.json
02/: 02_02_begin.py
llm_test/: __init__.py
