[tool.poetry]
name = "llm-test"
version = "0.1.0"
description = "i have no idea what i'm doing"
authors = ["clint eastwood<clint@eastwood.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
transformers = "^4.46.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.8.4"]
build-backend = "poetry.core.masonry.api"